syntax = "proto3";

//// https://protobuf.dev/reference/cpp/cpp-generated/#message
//option optimize_for = CODE_SIZE;

import "enums.proto";

package Odb.Lib.Protobuf.ProductModel;

//
//  Via.h
//

message Via {

    optional string name = 1;
    optional BoardSide boardSide = 2;
    
}